<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_ros2cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robert.budai@analog.com">robi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ament_cmake</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
