[package]
name = "adcam-installer"
version = "0.1.0"
edition = "2024"

[build-dependencies]
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
indicatif = "0.17"
dirs = "5.0"
regex = "1.0"