[package]
name = "adcam-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
indicatif = "0.17"
dirs = "5.0"
regex = "1.0"
flate2 = "1.0"
tar = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization, smaller binary
strip = true        # Strip symbols (as of Rust 1.60+)